TL/autocell/parser.output
   0  $accept : %entry% $end

   1  program : INT DIMENSIONS OF config END opt_statements EOF

   2  config : INT DOT_DOT INT
   3         | fields

   4  fields : field
   5         | fields COMMA field

   6  field : ID OF INT DOT_DOT INT

   7  opt_statements :
   8                 | statement opt_statements

   9  statement : cell ASSIGN expressions
  10            | ID ASSIGN expressions

  11  cell : LBRACKET INT COMMA INT RBRACKET

  12  expressions : expressions SUB T
  13              | expressions PLUS T
  14              | T

  15  T : expression
  16    | T MULT expression
  17    | T DIV expression
  18    | T MOD expression
  19    | SUB expression
  20    | PLUS expression

  21  expression : LPAR expressions RPAR
  22             | cell
  23             | INT
  24             | ID

  25  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (25)

	INT  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : INT . DIMENSIONS OF config END opt_statements EOF  (1)

	DIMENSIONS  shift 5
	.  error


state 4
	%entry% : '\001' program .  (25)

	.  reduce 25


state 5
	program : INT DIMENSIONS . OF config END opt_statements EOF  (1)

	OF  shift 6
	.  error


state 6
	program : INT DIMENSIONS OF . config END opt_statements EOF  (1)

	ID  shift 7
	INT  shift 8
	.  error

	config  goto 9
	fields  goto 10
	field  goto 11


state 7
	field : ID . OF INT DOT_DOT INT  (6)

	OF  shift 12
	.  error


state 8
	config : INT . DOT_DOT INT  (2)

	DOT_DOT  shift 13
	.  error


state 9
	program : INT DIMENSIONS OF config . END opt_statements EOF  (1)

	END  shift 14
	.  error


state 10
	config : fields .  (3)
	fields : fields . COMMA field  (5)

	COMMA  shift 15
	END  reduce 3


state 11
	fields : field .  (4)

	.  reduce 4


state 12
	field : ID OF . INT DOT_DOT INT  (6)

	INT  shift 16
	.  error


state 13
	config : INT DOT_DOT . INT  (2)

	INT  shift 17
	.  error


state 14
	program : INT DIMENSIONS OF config END . opt_statements EOF  (1)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	EOF  reduce 7

	opt_statements  goto 20
	statement  goto 21
	cell  goto 22


state 15
	fields : fields COMMA . field  (5)

	ID  shift 7
	.  error

	field  goto 23


state 16
	field : ID OF INT . DOT_DOT INT  (6)

	DOT_DOT  shift 24
	.  error


state 17
	config : INT DOT_DOT INT .  (2)

	.  reduce 2


state 18
	cell : LBRACKET . INT COMMA INT RBRACKET  (11)

	INT  shift 25
	.  error


state 19
	statement : ID . ASSIGN expressions  (10)

	ASSIGN  shift 26
	.  error


state 20
	program : INT DIMENSIONS OF config END opt_statements . EOF  (1)

	EOF  shift 27
	.  error


state 21
	opt_statements : statement . opt_statements  (8)
	opt_statements : .  (7)

	LBRACKET  shift 18
	ID  shift 19
	EOF  reduce 7

	opt_statements  goto 28
	statement  goto 21
	cell  goto 22


state 22
	statement : cell . ASSIGN expressions  (9)

	ASSIGN  shift 29
	.  error


state 23
	fields : fields COMMA field .  (5)

	.  reduce 5


state 24
	field : ID OF INT DOT_DOT . INT  (6)

	INT  shift 30
	.  error


state 25
	cell : LBRACKET INT . COMMA INT RBRACKET  (11)

	COMMA  shift 31
	.  error


state 26
	statement : ID ASSIGN . expressions  (10)

	LBRACKET  shift 18
	PLUS  shift 32
	SUB  shift 33
	LPAR  shift 34
	ID  shift 35
	INT  shift 36
	.  error

	cell  goto 37
	expressions  goto 38
	T  goto 39
	expression  goto 40


state 27
	program : INT DIMENSIONS OF config END opt_statements EOF .  (1)

	.  reduce 1


state 28
	opt_statements : statement opt_statements .  (8)

	.  reduce 8


state 29
	statement : cell ASSIGN . expressions  (9)

	LBRACKET  shift 18
	PLUS  shift 32
	SUB  shift 33
	LPAR  shift 34
	ID  shift 35
	INT  shift 36
	.  error

	cell  goto 37
	expressions  goto 41
	T  goto 39
	expression  goto 40


state 30
	field : ID OF INT DOT_DOT INT .  (6)

	.  reduce 6


state 31
	cell : LBRACKET INT COMMA . INT RBRACKET  (11)

	INT  shift 42
	.  error


state 32
	T : PLUS . expression  (20)

	LBRACKET  shift 18
	LPAR  shift 34
	ID  shift 35
	INT  shift 36
	.  error

	cell  goto 37
	expression  goto 43


state 33
	T : SUB . expression  (19)

	LBRACKET  shift 18
	LPAR  shift 34
	ID  shift 35
	INT  shift 36
	.  error

	cell  goto 37
	expression  goto 44


state 34
	expression : LPAR . expressions RPAR  (21)

	LBRACKET  shift 18
	PLUS  shift 32
	SUB  shift 33
	LPAR  shift 34
	ID  shift 35
	INT  shift 36
	.  error

	cell  goto 37
	expressions  goto 45
	T  goto 39
	expression  goto 40


state 35
	expression : ID .  (24)

	.  reduce 24


state 36
	expression : INT .  (23)

	.  reduce 23


state 37
	expression : cell .  (22)

	.  reduce 22


state 38
	statement : ID ASSIGN expressions .  (10)
	expressions : expressions . SUB T  (12)
	expressions : expressions . PLUS T  (13)

	PLUS  shift 46
	SUB  shift 47
	EOF  reduce 10
	LBRACKET  reduce 10
	ID  reduce 10


state 39
	expressions : T .  (14)
	T : T . MULT expression  (16)
	T : T . DIV expression  (17)
	T : T . MOD expression  (18)

	MULT  shift 48
	DIV  shift 49
	MOD  shift 50
	EOF  reduce 14
	LBRACKET  reduce 14
	PLUS  reduce 14
	SUB  reduce 14
	RPAR  reduce 14
	ID  reduce 14


state 40
	T : expression .  (15)

	.  reduce 15


state 41
	statement : cell ASSIGN expressions .  (9)
	expressions : expressions . SUB T  (12)
	expressions : expressions . PLUS T  (13)

	PLUS  shift 46
	SUB  shift 47
	EOF  reduce 9
	LBRACKET  reduce 9
	ID  reduce 9


state 42
	cell : LBRACKET INT COMMA INT . RBRACKET  (11)

	RBRACKET  shift 51
	.  error


state 43
	T : PLUS expression .  (20)

	.  reduce 20


state 44
	T : SUB expression .  (19)

	.  reduce 19


state 45
	expressions : expressions . SUB T  (12)
	expressions : expressions . PLUS T  (13)
	expression : LPAR expressions . RPAR  (21)

	PLUS  shift 46
	SUB  shift 47
	RPAR  shift 52
	.  error


state 46
	expressions : expressions PLUS . T  (13)

	LBRACKET  shift 18
	PLUS  shift 32
	SUB  shift 33
	LPAR  shift 34
	ID  shift 35
	INT  shift 36
	.  error

	cell  goto 37
	T  goto 53
	expression  goto 40


state 47
	expressions : expressions SUB . T  (12)

	LBRACKET  shift 18
	PLUS  shift 32
	SUB  shift 33
	LPAR  shift 34
	ID  shift 35
	INT  shift 36
	.  error

	cell  goto 37
	T  goto 54
	expression  goto 40


state 48
	T : T MULT . expression  (16)

	LBRACKET  shift 18
	LPAR  shift 34
	ID  shift 35
	INT  shift 36
	.  error

	cell  goto 37
	expression  goto 55


state 49
	T : T DIV . expression  (17)

	LBRACKET  shift 18
	LPAR  shift 34
	ID  shift 35
	INT  shift 36
	.  error

	cell  goto 37
	expression  goto 56


state 50
	T : T MOD . expression  (18)

	LBRACKET  shift 18
	LPAR  shift 34
	ID  shift 35
	INT  shift 36
	.  error

	cell  goto 37
	expression  goto 57


state 51
	cell : LBRACKET INT COMMA INT RBRACKET .  (11)

	.  reduce 11


state 52
	expression : LPAR expressions RPAR .  (21)

	.  reduce 21


state 53
	expressions : expressions PLUS T .  (13)
	T : T . MULT expression  (16)
	T : T . DIV expression  (17)
	T : T . MOD expression  (18)

	MULT  shift 48
	DIV  shift 49
	MOD  shift 50
	EOF  reduce 13
	LBRACKET  reduce 13
	PLUS  reduce 13
	SUB  reduce 13
	RPAR  reduce 13
	ID  reduce 13


state 54
	expressions : expressions SUB T .  (12)
	T : T . MULT expression  (16)
	T : T . DIV expression  (17)
	T : T . MOD expression  (18)

	MULT  shift 48
	DIV  shift 49
	MOD  shift 50
	EOF  reduce 12
	LBRACKET  reduce 12
	PLUS  reduce 12
	SUB  reduce 12
	RPAR  reduce 12
	ID  reduce 12


state 55
	T : T MULT expression .  (16)

	.  reduce 16


state 56
	T : T DIV expression .  (17)

	.  reduce 17


state 57
	T : T MOD expression .  (18)

	.  reduce 18


22 terminals, 12 nonterminals
26 grammar rules, 58 states
